# natural2sql-rlaif-env

./: Dockerfile  README.md  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: health_check.yml  sync_to_hf.yml
server/: app.py  environment.py
